manage: update todo

--- a/TODOs/20231004.md
+++ b/TODOs/20231004.md
@@ -1,2 +1,9 @@
-- Xaola
-    - Finishing Element Config
+todo:
+scrape/scraper_ts/src/TheSalesman/config/index.ts
+scrape/scraper_ts/src/ThePuppetShow/PuppetTricks.ts
+scrape/scraper_ts/src/ThePuppetShow/TheShow.ts
+
+
+doing:
+
+done:
