update: building app landing page puppet trick, delete  category_id column from shopify_app_detail SQL table, fixing: testing scraping sitemap run out of time limit 1hour

--- a/TODOs/20231018.md
+++ b/TODOs/20231018.md
@@ -1,6 +1,6 @@
 todo:
-/home/durian/learning/Xaola/scrape/scraper_ts/test/PuppetTricks.test.ts
 
 doing:
+/home/durian/learning/Xaola/scrape/scraper_ts/test/PuppetTricks.ts
 
 done:
